line wrap and formatting tweaks

--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -177,7 +177,7 @@ with shorter-term interests in the governance of the Network.
 Voting power is the weight of your vote towards decisions made by the DAO or subDAO. The more veHNT
 you have, the more weight your vote has.
 
-You can only increase your voting power by staking more HNT or extending an existing veHNT lock-up 
+You can only increase your voting power by staking more HNT or extending an existing veHNT lock-up
 period for longer.
 
 ### How to Choose a subDAO to Stake?
@@ -198,9 +198,9 @@ amount of net subDAO token earnings as delegators share the 6% subDAO token emis
 
 ### How Will Staking Work By Using veHNT?
 
-Anyone can stake any amount of HNT and lock it up for six months to four years. You choose your 
-unstaking date at the time of lock-up or deciding to keep it on a rolling lock-up period before 
-initiating the start or the veHNT decay process . The HNT staked is exchanged for veHNT, which 
+Anyone can stake any amount of HNT and lock it up for six months to four years. You choose your
+unstaking date at the time of lock-up or deciding to keep it on a rolling lock-up period before
+initiating the start or the veHNT decay process . The HNT staked is exchanged for veHNT, which
 provides two benefits:
 
 - Voting in the Helium DAO on new subDAO proposals.
@@ -219,7 +219,7 @@ an exchange of 1:100 HNT to veHNT. Any period in between will be treated on a li
 to 100.
 
 > For example, I choose to lock-up 10 HNT for six months. I receive 10 veHNT. If I decide to unstake
-> immediately, after six months, my veHNT decays to 0 until my 10 HNT unlocks and is available to me 
+> immediately, after six months, my veHNT decays to 0 until my 10 HNT unlocks and is available to me
 > for use in my wallet.
 
 ### How Can I Obtain veHNT?
@@ -234,21 +234,23 @@ Check out a [DAO beta view](https://dao-beta.mango.markets/dao/MNGO) on Realms t
 
 ### Is There a Staking "Genesis" Period?
 
-For the first seven days after the Solana transition, there will be a 3x bonus for new veHNT stakers.
+For the first seven days after the Solana transition, there will be a 3x bonus for new veHNT
+stakers.
 
 Only during the seven-day "Genesis" period do new stakers receive 3x the veHNT they would normally
 receive for staking.
 
 For example:
-> Staking 10 HNT for six months gets 30 veHNT (10x1x3) that decays from 30 to 0 veHNT
-> at the end of the staking period, and 10 HNT is returned to the wallet.
+
+> Staking 10 HNT for six months gets 30 veHNT (10x1x3) that decays from 30 to 0 veHNT at the end of
+> the staking period, and 10 HNT is returned to the wallet.
 
 > Staking 20 HNT for 24 months returns 2598 veHNT (20x43.3x3), and these decay to 0 veHNT at the end
 > of the staking period, and 20 HNT is returned to the wallet.
 
-Validator owners can also take advantage of the 7 day bonus period and get the 3x bonus applied 
-if they extend their default 6 month lock-up period. This 3x bonus will be removed if they extend 
-the lock-up further after the initial seven days.
+Validator owners can also take advantage of the 7 day bonus period and get the 3x bonus applied if
+they extend their default 6 month lock-up period. This 3x bonus will be removed if they extend the
+lock-up further after the initial seven days.
 
 ### Will I Earn HNT by Staking For veHNT?
 
@@ -260,20 +262,20 @@ as IOT or MOBILE), and the subDAOs allocate up to 6% of their token emissions to
 delegating to that subDAO.
 
 > For example: When you delegate your veHNT to the IOT subDAO, you receive IOT every epoch that is
-> claimable in your Helium Wallet. If you choose, this IOT can then be burned at the IOT subDAO treasury
-> for HNT, or you may hold your IOT tokens.
+> claimable in your Helium Wallet. If you choose, this IOT can then be burned at the IOT subDAO
+> treasury for HNT, or you may hold your IOT tokens.
 
 ### How Do I Stake for veHNT After HIP-51 and HIP-70 Are Implemented?
 
 1. If you do not already have HNT in your Helium Wallet, transfer HNT into your Helium Wallet to
-   stake. 
-2. Using the Helium Wallet App/Realms, stake HNT into veHNT and define the lock-up period and if
-   the decay countdown period starts immediately or lock-up period is rolling with a decay countdown
-   starting at a future date to be decided (default)
-   The granularity of selection of lock-up period is initially in days.
+   stake.
+2. Using the Helium Wallet App/Realms, stake HNT into veHNT and define the lock-up period and if the
+   decay countdown period starts immediately or lock-up period is rolling with a decay countdown
+   starting at a future date to be decided (default) The granularity of selection of lock-up period
+   is initially in days.
 3. Using the Helium Wallet App/Realms, delegate that veHNT into one or more existing subDAOs. You
-   may have to complete several transactions depending on how many subDAOs you delegate to, or
-   if you want different amounts delegated for different lock-up periods.
+   may have to complete several transactions depending on how many subDAOs you delegate to, or if
+   you want different amounts delegated for different lock-up periods.
 4. Your delegated HNT will count towards the subDAOs Utility Score and provide increased HNT
    earnings in the subDAO's treasury per epoch.
 5. There is a week long cooling off period before removal or changes to delegations can be made.
@@ -300,22 +302,20 @@ This value is multiplied by 3x during the first 7 days after the Solana transiti
 
 N/A = Not applicable. There is a minium period of 6 months lock-up.
 
-
-| Months staked  | veHNT received |     | Months staked  | veHNT received |     | Months staked | veHNT received |     | Months staked  | veHNT received |
-| :-------------------------: | :--------: | --- | :-------------------------: | :--------: | --- | :-------------------------: | :--------: | --- | :-------------------------: | :--------: |
-|              1              |    N/A    |     |             13              |    17.5    |     |             25              |    45.8    |     |             37              |    74.1    |
-|              2              |    N/A    |     |             14              |    19.9    |     |             26              |    48.1    |     |             38              |    76.4    |
-|              3              |    N/A    |     |             15              |    22.2    |     |             27              |    50.5    |     |             39              |    78.8    |
-|              4              |    N/A    |     |             16              |    24.6    |     |             28              |    52.9    |     |             40              |    81.1    |
-|              5              |    N/A    |     |             17              |    26.9    |     |             29              |    55.2    |     |             41              |    83.5    |
-|              6              |    1.0     |     |             18              |    29.3    |     |             30              |    57.6    |     |             42              |    85.9    |
-|              7              |    3.4     |     |             19              |    31.6    |     |             31              |    59.9    |     |             43              |    88.2    |
-|              8              |    5.7     |     |             20              |    34.0    |     |             32              |    62.3    |     |             44              |    90.6    |
-|              9              |    8.1     |     |             21              |    36.4    |     |             33              |    64.6    |     |             45              |    92.9    |
-|             10              |    10.4    |     |             22              |    38.7    |     |             34              |    67.0    |     |             46              |    95.3    |
-|             11              |    12.8    |     |             23              |    41.1    |     |             35              |    69.4    |     |             47              |    97.6    |
-|             12              |    15.1    |     |             24              |    43.4    |     |             36              |    71.7    |     |             48              |   100.0    |
-
+| Months staked | veHNT received |     | Months staked | veHNT received |     | Months staked | veHNT received |     | Months staked | veHNT received |
+| :-----------: | :------------: | --- | :-----------: | :------------: | --- | :-----------: | :------------: | --- | :-----------: | :------------: |
+|       1       |      N/A       |     |      13       |      17.5      |     |      25       |      45.8      |     |      37       |      74.1      |
+|       2       |      N/A       |     |      14       |      19.9      |     |      26       |      48.1      |     |      38       |      76.4      |
+|       3       |      N/A       |     |      15       |      22.2      |     |      27       |      50.5      |     |      39       |      78.8      |
+|       4       |      N/A       |     |      16       |      24.6      |     |      28       |      52.9      |     |      40       |      81.1      |
+|       5       |      N/A       |     |      17       |      26.9      |     |      29       |      55.2      |     |      41       |      83.5      |
+|       6       |      1.0       |     |      18       |      29.3      |     |      30       |      57.6      |     |      42       |      85.9      |
+|       7       |      3.4       |     |      19       |      31.6      |     |      31       |      59.9      |     |      43       |      88.2      |
+|       8       |      5.7       |     |      20       |      34.0      |     |      32       |      62.3      |     |      44       |      90.6      |
+|       9       |      8.1       |     |      21       |      36.4      |     |      33       |      64.6      |     |      45       |      92.9      |
+|      10       |      10.4      |     |      22       |      38.7      |     |      34       |      67.0      |     |      46       |      95.3      |
+|      11       |      12.8      |     |      23       |      41.1      |     |      35       |      69.4      |     |      47       |      97.6      |
+|      12       |      15.1      |     |      24       |      43.4      |     |      36       |      71.7      |     |      48       |     100.0      |
 
 ### Do I Have to Delegate My veHNT to a subDAO?
 
@@ -323,8 +323,8 @@ No. You can hold your veHNT as is or delegate to a subDAO at any time.
 
 :::note
 
-Once you delegate veHNT, you cannot immediately un-delegate. Instead, you must wait for the week long
-cooldown period to end.
+Once you delegate veHNT, you cannot immediately un-delegate. Instead, you must wait for the week
+long cooldown period to end.
 
 :::
 
@@ -344,7 +344,6 @@ After one epoch has passed after staking a single 1 HNT for 48 months, the quant
 wallet will decay from 100 veHNT to 99.998575 veHNT. This decrease will recur every 30 minutes over
 all the remaining 48 months until it hits zero.
 
-
 ### Can I Increase My Staking Lock-up Period At Any Time?
 
 Yes. You can increase your lock-up period to the maximum of 48 months at any time, and each increase
@@ -357,12 +356,12 @@ period for any reason.
 
 ### Can I Automate Re-Staking?
 
-Yes a constant rolling lock-up period will be the default option. The decay countdown start point will
-be a click to activate option.
+Yes a constant rolling lock-up period will be the default option. The decay countdown start point
+will be a click to activate option.
 
-> Staking 100 HNT for 1 year will get approx 1510 veHNT and this will be a rolling 1 year period and will
-> remain at 1510 veHNT until the decay countdown is activated and this will then decrease linearly over
-> one year to 0 veHNT and the HNT is returned.
+> Staking 100 HNT for 1 year will get approx 1510 veHNT and this will be a rolling 1 year period and
+> will remain at 1510 veHNT until the decay countdown is activated and this will then decrease
+> linearly over one year to 0 veHNT and the HNT is returned.
 
 ### Can I Transfer my veHNT or any of the veDNTs to Someone Else?
 
@@ -371,8 +370,8 @@ is not a token.
 
 ### How Do I Buy veHNT or Any of the veDNTs?
 
-You cannot buy veHNT or any of the other veDNTs. It is not a tradable token. veHNT can only be obtained 
-by staking HNT with a lock-up period. Likewise, you cannot buy veIOT or veMOBILE.
+You cannot buy veHNT or any of the other veDNTs. It is not a tradable token. veHNT can only be
+obtained by staking HNT with a lock-up period. Likewise, you cannot buy veIOT or veMOBILE.
 
 veHNT and veDNTs have no price in the larger crypto markets.
 
@@ -380,8 +379,8 @@ veHNT and veDNTs have no price in the larger crypto markets.
 
 The DAO Utility score is described in [HIP-51](https://github.com/helium/HIP/issues/336)
 
-Each new subDAO of HNT has a Utility Score that mathematically represents the proportion shared
-of HNT tokens distributed to them every epoch from the fixed amount allocated to all subDAOs. The
+Each new subDAO of HNT has a Utility Score that mathematically represents the proportion shared of
+HNT tokens distributed to them every epoch from the fixed amount allocated to all subDAOs. The
 higher the Utility Score, the more significant the ratio of HNT emitted to that subDAO's treasury
 per epoch.
 
