Apply suggestions from code review
Co-authored-by: Coco Tang <coco@helium.com>

--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -35,7 +35,7 @@ results to an Off-Chain Oracle.
 Makers must push this mandatory update to their fleet of Hotspots. Failure to do so will mean their
 customers cease to mine and stop earning rewards once the migration is complete.
 
-### Hotspots Will Being To Earn IOT
+### Hotspots Will Earn IOT
 
 Hotspot Owners will start earning IOT as the migration will launch the IOT subDAO. To view IOT
 earned by your Hotspot, use the [Helium Wallet app](/wallets/helium-wallet-app). 5G Hotspot Owners
@@ -88,7 +88,13 @@ Original Helium Hotspots in two phases.
 
 - Hotspot App users will be migrated to use the [Helium Wallet app](/wallets/helium-wallet-app) for
   Helium Wallet management.
-- New Hotspots will no longer be able to be onboarded using the Helium App, and will instead to app
+- Users can no longer onboard new Hotspots using the Helium App. All new Hotspots will be directed to use the Hotspot's Maker app, web dashboard, or contact email support (in the event that a Maker app is not available). 
+
+:::note
+All Makers had a deadline to launch their Maker app by March of 2022. Makers without an app or web dashboard either have an app in development or have not responded to requests for additional updates. 
+:::
+
+
   stores, dashboards, or their email support.
 - Hotspot management for _existing_ Hotspots still available in the Hotspot App.
 - The `transfer_hotspot` and `assert_location` will use the Helium Wallet app for signatures.
@@ -106,7 +112,7 @@ Original Helium Hotspots in two phases.
 Users that do not transition to the Helium Wallet app prior to the Solana migration will still be
 able to access their seed phrase and transition to the Helium Wallet app but will not be able to
 submit transactions in the Helium app.
-
+Seed phrase export functionality will remain in the app for at least 1 year post-migration.
 :::
 
 ### Maker Apps
@@ -142,15 +148,15 @@ To start, ensure your [Helium app](/wallets/app-wallet) is updated and that you 
 latest Helium Wallet app.
 
 1. Open the [Helium app](/wallets/app-wallet) (minimum v4.3.0)
-2. Tap `Export 12 Word Seed Phrase` in the migration popup
-3. The [Helium Wallet app](/wallets/helium-wallet-app) will automatically open. Tap `Import`
-4. Now your HNT, DC, MOBILE, and Hotspots have successfully moved to the Solana Blockchain.
+2. Tap `Start Migration` in the migration popup
+3. Confirm the Wallet account you want to import, then tap `Export to Wallet App`. The [Helium Wallet app](/wallets/helium-wallet-app) will automatically open and complete the migration.
+4. Now your HNT, DC, MOBILE, and Hotspots have successfully moved to the Helium Wallet App and ready for the Solana migration, which will happen automatically in January 2023.
 
-You will use the [Helium Wallet app](/wallets/helium-wallet-app) moving forward. You will locate
-Hotspot NFTs in the NFT Collectibles section, and token balances are visible on the account page.
+You will use the [Helium Wallet app](/wallets/helium-wallet-app) moving forward. You can find
+Hotspot NFTs in the NFT Collectibles section once Helium on Solana goes live. Token balances are visible on the account page.
 You can also create multiple accounts in the [Helium Wallet app](/wallets/helium-wallet-app).
 
-Your public wallet address will change, but your private key and 12-word seed phrase will remain the
+Your public wallet address will change post-migration, but your private key and 12-word seed phrase will remain the
 same.
 
 ### For Helium Wallet App Users
