added app store and play store link badges

--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -10,6 +10,31 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/wallets/helium-wallet-app/header.png')} />
 
+:::note Download the Helium Wallet Apps
+
+<div class="container">
+  <div class="row">
+    <div class="col col--6 img-center">
+      <a href="https://apps.apple.com/us/app/helium-hnt-wallet/id1609525848">
+        <img
+          className="app-store-badge"
+          src={useBaseUrl('img/app-store-badges/apple-app-store-badge-en.svg')}
+        />
+      </a>
+    </div>
+    <div class="col col--6 img-center">
+      <a href="https://play.google.com/store/apps/details?id=com.helium.wallet.app">
+        <img
+          className="app-store-badge"
+          src={useBaseUrl('img/app-store-badges/google-play-store-badge-en.svg')}
+        />
+      </a>
+    </div>
+  </div>
+</div>
+
+:::
+
 The Helium Wallet app is the new trusted way to manage your tokens and identity on the Helium
 Blockchain. This new Wallet App is not meant to manage Hotspots or Validators.
 
