--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -145,6 +145,31 @@ add new Hotspots to the network, transfer existing Hotspots, or assert locations
 All Helium Wallets will need to be migrated to the Solana blockchain. What this means for each
 Helium Wallet type is explained below.
 
+:::note Download the Helium Wallet Apps
+
+<div class="container">
+  <div class="row">
+    <div class="col col--6 img-center">
+      <a href="https://apps.apple.com/us/app/helium-hnt-wallet/id1609525848">
+        <img
+          className="app-store-badge"
+          src={useBaseUrl('img/app-store-badges/apple-app-store-badge-en.svg')}
+        />
+      </a>
+    </div>
+    <div class="col col--6 img-center">
+      <a href="https://play.google.com/store/apps/details?id=com.helium.wallet.app">
+        <img
+          className="app-store-badge"
+          src={useBaseUrl('img/app-store-badges/google-play-store-badge-en.svg')}
+        />
+      </a>
+    </div>
+  </div>
+</div>
+
+:::
+
 ### For Helium App Users
 
 The [Helium app](/wallets/app-wallet) will require a migration to the
