Apply suggestions from code review
Co-authored-by: Coco Tang <coco@helium.com>

--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -35,8 +35,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::
 
-The Helium Wallet app is the new trusted way to manage your tokens and identity on the Helium
-Blockchain. This new Wallet App is not meant to manage Hotspots or Validators.
+The Helium Wallet app is the trusted way to manage your tokens and identity on the Helium
+Blockchain. 
 
 Some notable features:
 
