--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -216,7 +216,7 @@ upcoming version will use the Solana private key derivation path that moves all 
 balances over to Solana. You may need to uninstall any Solana Ledger Apps during the Wallet
 migration process.
 
-Your public key will change on Solana and the private key will also need to be updated.
+Your public key will change on Solana but the private key will remain the same.
 
 ### For CLI Wallet Users
 
